feat: link tech stack, experience, and projects with cross-section interactions
- Add build-time tech aggregation: auto-collect techs from experience/projects
  into an "Others" category when not in techstack.mdx (Django, gRPC, WebSocket)
- Add project-to-experience linking via `company` field in projects MDX
- Show related projects inline under experience items with border accent
- Show company badge (Building2 icon) on company-linked project cards
- Extract shared levelColors to tech-utils.ts for reuse across components
- Add interactive tech highlighting: click any tech badge to highlight/dim
  matching items across tech stack, experience, and projects sections
- Apply tech level colors to experience/project tech badges via techMap lookup

--- a/src/content/en/projects.mdx
+++ b/src/content/en/projects.mdx
@@ -1,6 +1,7 @@
 ---
 items:
   - title: "Open Source API Gateway"
+    company: "ABC Tech"
     startDate: "2023-06"
     endDate: ""
     techUsed: ["Go", "Docker", "Redis", "gRPC"]
