--- a/src/content/ko/projects.mdx
+++ b/src/content/ko/projects.mdx
@@ -1,6 +1,7 @@
 ---
 items:
   - title: "오픈소스 API 게이트웨이"
+    company: "ABC 테크"
     startDate: "2023-06"
     endDate: ""
     techUsed: ["Go", "Docker", "Redis", "gRPC"]
