feat: add multi-page career description with experience and project detail pages
Add three-level navigation: resume overview → experience detail → project detail.
Experience items link to /experience/[slug] showing company info and project list.
Project items link to /projects/[slug] with rich MDX career descriptions.

--- a/src/content/ko/projects.mdx
+++ b/src/content/ko/projects.mdx
@@ -1,6 +1,7 @@
 ---
 items:
-  - title: "오픈소스 API 게이트웨이"
+  - slug: "api-gateway"
+    title: "오픈소스 API 게이트웨이"
     company: "ABC 테크"
     startDate: "2023-06"
     endDate: ""
@@ -11,7 +12,8 @@ items:
       - "GitHub 스타 500+ 달성"
     links:
       github: "https://github.com/example/api-gateway"
-  - title: "실시간 채팅 플랫폼"
+  - slug: "chat-platform"
+    title: "실시간 채팅 플랫폼"
     startDate: "2021-03"
     endDate: "2021-12"
     techUsed: ["TypeScript", "NestJS", "WebSocket", "MongoDB"]
