--- a/src/content/en/experience.mdx
+++ b/src/content/en/experience.mdx
@@ -1,6 +1,7 @@
 ---
 items:
-  - company: "ABC Tech"
+  - slug: "abc-tech"
+    company: "ABC Tech"
     role: "Senior Backend Developer"
     startDate: "2022-03"
     endDate: ""
@@ -10,7 +11,8 @@ items:
       - "Led microservices architecture design and monolith migration"
       - "Improved API response time by 40%"
       - "Operated backend systems serving 2M+ DAU"
-  - company: "XYZ Startup"
+  - slug: "xyz-startup"
+    company: "XYZ Startup"
     role: "Backend Developer"
     startDate: "2020-01"
     endDate: "2022-02"
