--- a/src/content/en/projects.mdx
+++ b/src/content/en/projects.mdx
@@ -1,6 +1,7 @@
 ---
 items:
-  - title: "Open Source API Gateway"
+  - slug: "api-gateway"
+    title: "Open Source API Gateway"
     company: "ABC Tech"
     startDate: "2023-06"
     endDate: ""
@@ -11,7 +12,8 @@ items:
       - "Achieved 500+ GitHub stars"
     links:
       github: "https://github.com/example/api-gateway"
-  - title: "Real-time Chat Platform"
+  - slug: "chat-platform"
+    title: "Real-time Chat Platform"
     startDate: "2021-03"
     endDate: "2021-12"
     techUsed: ["TypeScript", "NestJS", "WebSocket", "MongoDB"]
