--- a/src/content/ko/experience.mdx
+++ b/src/content/ko/experience.mdx
@@ -1,6 +1,7 @@
 ---
 items:
-  - company: "ABC 테크"
+  - slug: "abc-tech"
+    company: "ABC 테크"
     role: "시니어 백엔드 개발자"
     startDate: "2022-03"
     endDate: ""
@@ -10,7 +11,8 @@ items:
       - "마이크로서비스 아키텍처 설계 및 모놀리스 마이그레이션 주도"
       - "API 응답 시간 40% 개선"
       - "일 200만 DAU 서비스의 백엔드 시스템 운영"
-  - company: "XYZ 스타트업"
+  - slug: "xyz-startup"
+    company: "XYZ 스타트업"
     role: "백엔드 개발자"
     startDate: "2020-01"
     endDate: "2022-02"
