feat: migrate portfolio content from Notion and add dynamic i18n metadata
- Sync all MDX content (profile, experience, projects, techstack, education,
  certifications) from Notion with detailed sub-page content
- Add date-prefixed project detail files for chronological file ordering
- Update content loader to support date-prefixed slug matching
- Add dynamic document title, description, and lang attribute on locale switch
- Add profile image and favicon
- Add sync-notion Claude skill
- Remove placeholder project files and unused Next.js/Vercel SVGs

--- a/src/content/en/education.mdx
+++ b/src/content/en/education.mdx
@@ -1,10 +1,21 @@
 ---
 items:
-  - institution: "Seoul National University"
+  - institution: "Hankuk University of Foreign Studies"
     degree: "Bachelor's"
-    field: "Computer Science"
-    startDate: "2015-03"
-    endDate: "2019-02"
-    gpa: "3.8/4.5"
-    description: "Honors in Operating Systems, Distributed Systems, and Algorithms"
+    field: "International Commerce / Convergence Software (Double Major)"
+    startDate: "2018-03"
+    endDate: "2021-02"
+    description: "Data Structures, Algorithms, Database, OS, Networks"
+  - institution: "Kyungil Game Academy"
+    degree: "Certificate"
+    field: "Mobile RPG Game Client Programming"
+    startDate: "2020-06"
+    endDate: "2021-03"
+    description: "C++, Windows API, C#, Unity"
+  - institution: "Ateneo de Manila University"
+    degree: "Incomplete"
+    field: "Management Engineering"
+    startDate: "2014-02"
+    endDate: "2017-06"
+    description: "Information Systems Programming, Quantitative Management"
 ---
