--- a/src/content/en/experience.mdx
+++ b/src/content/en/experience.mdx
@@ -1,25 +1,29 @@
 ---
 items:
-  - slug: "abc-tech"
-    company: "ABC Tech"
-    role: "Senior Backend Developer"
-    startDate: "2022-03"
+  - slug: "karrot-pay"
+    company: "Karrot Pay"
+    role: "Backend Developer"
+    startDate: "2024-05"
     endDate: ""
     location: "Seoul"
-    techUsed: ["Java", "Spring Boot", "Kubernetes", "PostgreSQL", "Redis"]
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
-      - "Led microservices architecture design and monolith migration"
-      - "Improved API response time by 40%"
-      - "Operated backend systems serving 2M+ DAU"
-  - slug: "xyz-startup"
-    company: "XYZ Startup"
+      - "Built PG redundancy and real-time settlement for online payment system"
+      - "Developed offline payment prepaid settlement and promotion systems"
+      - "Added card payment support and shipment tracking to escrow service"
+      - "Built B2B gift card issuance platform and gift shop service"
+      - "Cleared tech debt: Spring Boot 2→3, Vue.js 2→3 upgrades"
+  - slug: "gabia"
+    company: "Gabia"
     role: "Backend Developer"
-    startDate: "2020-01"
-    endDate: "2022-02"
+    startDate: "2021-05"
+    endDate: "2024-05"
     location: "Seoul"
-    techUsed: ["Python", "Django", "AWS", "Redis", "PostgreSQL"]
+    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx", "Docker"]
     highlights:
-      - "Designed and implemented real-time notification system"
-      - "Built payment processing infrastructure"
-      - "Reduced deployment time by 60% through CI/CD automation"
+      - "Developed and operated multiple domain registrar services (registration, renewal, reservation, etc.)"
+      - "Built MSA with Java Spring MVC/JPA, RESTful APIs and batch jobs"
+      - "Modernized PHP legacy systems (PHPDoc, PHPUnit, Composer, Xdebug)"
+      - "Improved service architecture with hexagonal architecture and multi-module design"
+      - "Boosted productivity with OpenFeign, Springdoc, and OpenAPI Generator"
 ---
