--- a/src/content/en/profile.mdx
+++ b/src/content/en/profile.mdx
@@ -1,11 +1,11 @@
 ---
-name: "Gildong Hong"
+name: "Kijung Kim"
 title: "Software Engineer"
-email: "hello@example.com"
+email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
-linkedin: "https://linkedin.com/in/example"
+linkedin: "https://www.linkedin.com/in/kijung-kim-2485a9128"
 location: "Seoul, South Korea"
-photo: "/images/profile.jpg"
+photo: "/images/Gopherized_Luke.png"
 ---
 
-Software engineer with 5+ years of experience building scalable distributed systems and cloud-native applications.
+Backend developer at Karrot Pay, building and operating online/offline payment and settlement servers based on Kotlin + Spring, along with Vue-based admin systems. Experienced in successfully modernizing legacy applications, currently designing and building scalable payment/settlement systems.
