--- a/src/content/en/projects.mdx
+++ b/src/content/en/projects.mdx
@@ -1,27 +1,109 @@
 ---
 items:
-  - slug: "api-gateway"
-    title: "Open Source API Gateway"
-    company: "ABC Tech"
-    startDate: "2023-06"
+  - slug: "offline-payment"
+    title: "Offline Payment Service"
+    company: "Karrot Pay"
+    startDate: "2025-05"
     endDate: ""
-    techUsed: ["Go", "Docker", "Redis", "gRPC"]
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka"]
     highlights:
-      - "Maintainer of high-performance API gateway open source project"
-      - "Implemented reverse proxy handling 100K+ requests per second"
-      - "Achieved 500+ GitHub stars"
-    links:
-      github: "https://github.com/example/api-gateway"
-  - slug: "chat-platform"
-    title: "Real-time Chat Platform"
-    startDate: "2021-03"
-    endDate: "2021-12"
-    techUsed: ["TypeScript", "NestJS", "WebSocket", "MongoDB"]
+      - "Developed prepaid settlement for offline payments"
+      - "Implemented brand discount schemes and merchant management"
+      - "Built nearby store search functionality"
+      - "Developed growth actions including brand promotions"
+  - slug: "gift-shop"
+    title: "Gift Shop Service"
+    company: "Karrot Pay"
+    startDate: "2024-11"
+    endDate: "2025-05"
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis"]
     highlights:
-      - "Built WebSocket-based real-time messaging server"
-      - "Supported 10K concurrent users"
-      - "Achieved sub-50ms message delivery latency"
+      - "Built B2B promotional gift card issuance platform"
+      - "Handled settlement policy changes for card payments"
+      - "Enhanced gift voucher usage data pipeline"
+  - slug: "escrow-service"
+    title: "Escrow Service"
+    company: "Karrot Pay"
+    startDate: "2024-08"
+    endDate: "2024-11"
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Vue.js"]
+    highlights:
+      - "Developed fungibility check and card payment features"
+      - "Built shipment registration and package tracking"
+      - "Added courier support and manual tracking number registration with admin"
+  - slug: "payment-settlement"
+    title: "Payment / Settlement System"
+    company: "Karrot Pay"
+    startDate: "2024-05"
+    endDate: "2024-11"
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js"]
+    highlights:
+      - "Implemented PG redundancy and traffic distribution"
+      - "Built real-time settlement system"
+      - "Improved auto-payment failure rate"
+      - "Developed Hana Card and KB Card easy registration"
+      - "Built partner admin and improved payment history admin"
+  - slug: "karrot-pay-devexp"
+    title: "Developer Experience & Tech Debt"
+    company: "Karrot Pay"
+    startDate: "2024-05"
+    endDate: ""
+    techUsed: ["Kotlin", "Spring Framework", "Vue.js", "Github Actions"]
+    highlights:
+      - "Upgraded payment/settlement systems from Spring Boot 2 to 3"
+      - "Upgraded admin from Vue.js 2 to 3"
+      - "Set up test coverage visualization with Jacoco Badge Generator"
+      - "Built API documentation site with Scalar and integration guide"
+  - slug: "domain-services"
+    title: "Domain Services Development"
+    company: "Gabia"
+    startDate: "2021-05"
+    endDate: "2024-05"
+    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx"]
+    highlights:
+      - "Built new domain registry system"
+      - "Developed domain reservation unified search/order service"
+      - "Developed domain registration change/cancellation service"
+      - "Built KR domain reservation and expired domain parking services"
+  - slug: "gabia-legacy"
+    title: "Legacy Modernization & DevExp"
+    company: "Gabia"
+    startDate: "2021-08"
+    endDate: "2024-05"
+    techUsed: ["Java", "Spring Framework", "PHP", "MySQL", "Nginx", "Docker"]
+    highlights:
+      - "Applied hexagonal architecture, multi-module design, and monorepo"
+      - "Separated domain ops frontend server and improved registry communication daemon"
+      - "Introduced nGrinder load testing and API doc automation (Springdoc, OpenAPI Generator)"
+      - "Set up PHP Composer autoload, Xdebug and improved Sentry alerting"
+  - slug: "mattermost-sentrybot"
+    title: "Mattermost Sentrybot"
+    startDate: "2023-06"
+    endDate: "2023-06"
+    techUsed: ["Python", "FastAPI", "Docker"]
+    highlights:
+      - "Built a chatbot to relay Sentry alerts to Mattermost via webhooks"
+      - "Developed FastAPI-based webhook proxy server with Dockerfile"
     links:
-      github: "https://github.com/example/chat-platform"
-      demo: "https://chat-demo.example.com"
+      github: "https://github.com/copolio/mattermost-sentrybot"
+  - slug: "namegpt"
+    title: "NameGPT"
+    startDate: "2023-04"
+    endDate: "2023-05"
+    techUsed: ["Go", "TypeScript", "Next.js"]
+    highlights:
+      - "Developed GPT-powered domain name recommendation service"
+      - "Built REST API with Go/Gin/GORM and frontend with Next.js/Tailwind"
+    links:
+      github: "https://github.com/copolio/namegpt"
+  - slug: "webcron"
+    title: "Webcron"
+    startDate: "2022-06"
+    endDate: "2022-08"
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "TypeScript", "Vue.js"]
+    highlights:
+      - "Built web-based crontab management replacing scattered text files"
+      - "Kotlin Spring MVC/JPA REST API + Vue/Ant Design frontend"
+    links:
+      github: "https://github.com/copolio/webcron"
 ---
