--- a/src/content/en/techstack.mdx
+++ b/src/content/en/techstack.mdx
@@ -1,41 +1,67 @@
 ---
 categories:
-  - category: "Languages"
+  - category: "Backend"
     items:
+      - name: "Kotlin"
+        level: "expert"
       - name: "Java"
         level: "expert"
+      - name: "Spring Framework"
+        level: "expert"
+      - name: "JPA"
+        level: "expert"
+      - name: "PHP"
+        level: "advanced"
+      - name: "REST API"
+        level: "expert"
+      - name: "GraphQL"
+        level: "intermediate"
+  - category: "Frontend"
+    items:
       - name: "TypeScript"
         level: "advanced"
-      - name: "Python"
-        level: "intermediate"
-      - name: "Go"
-        level: "intermediate"
-  - category: "Frameworks"
-    items:
-      - name: "Spring Boot"
-        level: "expert"
-      - name: "Next.js"
+      - name: "JavaScript"
+        level: "advanced"
+      - name: "Vue.js"
         level: "advanced"
       - name: "React"
+        level: "intermediate"
+      - name: "jQuery"
+        level: "intermediate"
+  - category: "Database & Middleware"
+    items:
+      - name: "MySQL"
         level: "advanced"
-      - name: "NestJS"
+      - name: "Redis"
+        level: "advanced"
+      - name: "Kafka"
+        level: "intermediate"
+      - name: "Oracle"
+        level: "intermediate"
+      - name: "BigQuery"
         level: "intermediate"
   - category: "Infrastructure & DevOps"
     items:
-      - name: "AWS"
-        level: "advanced"
       - name: "Docker"
         level: "advanced"
       - name: "Kubernetes"
         level: "intermediate"
-      - name: "Terraform"
+      - name: "Linux"
+        level: "advanced"
+      - name: "Nginx"
+        level: "advanced"
+      - name: "Github Actions"
+        level: "advanced"
+      - name: "ArgoCD"
         level: "intermediate"
-  - category: "Databases"
+  - category: "Monitoring"
     items:
-      - name: "PostgreSQL"
+      - name: "Datadog"
         level: "advanced"
-      - name: "Redis"
+      - name: "Sentry"
         level: "advanced"
-      - name: "MongoDB"
+      - name: "Grafana"
+        level: "intermediate"
+      - name: "ELK"
         level: "intermediate"
 ---
