--- a/src/content/ko/certifications.mdx
+++ b/src/content/ko/certifications.mdx
@@ -1,11 +1,9 @@
 ---
 items:
-  - name: "AWS Solutions Architect - Associate"
-    issuer: "Amazon Web Services"
-    date: "2023-05"
-    credentialId: "ABC123456"
-    url: "https://aws.amazon.com/certification/"
   - name: "정보처리기사"
     issuer: "한국산업인력공단"
-    date: "2019-11"
+    date: "2021-06"
+  - name: "컴퓨터활용능력 1급"
+    issuer: "대한상공회의소"
+    date: "2020-12"
 ---
