--- a/src/content/ko/education.mdx
+++ b/src/content/ko/education.mdx
@@ -1,10 +1,21 @@
 ---
 items:
-  - institution: "서울대학교"
+  - institution: "한국외국어대학교"
     degree: "학사"
-    field: "컴퓨터공학"
-    startDate: "2015-03"
-    endDate: "2019-02"
-    gpa: "3.8/4.5"
-    description: "운영체제, 분산시스템, 알고리즘 과목 우수 성적"
+    field: "국제통상학과 / 융복합 소프트웨어 복수전공"
+    startDate: "2018-03"
+    endDate: "2021-02"
+    description: "자료구조, 알고리즘, 데이터베이스, 운영체제, 네트워크"
+  - institution: "경일게임아카데미"
+    degree: "수료"
+    field: "모바일 RPG 게임 클라이언트 프로그래밍 전문가 양성과정"
+    startDate: "2020-06"
+    endDate: "2021-03"
+    description: "C++, Windows API, C#, Unity"
+  - institution: "아테네오 대학교 마닐라"
+    degree: "중퇴"
+    field: "경영공학"
+    startDate: "2014-02"
+    endDate: "2017-06"
+    description: "정보 시스템 프로그래밍, 계량경영학"
 ---
