--- a/src/content/en/certifications.mdx
+++ b/src/content/en/certifications.mdx
@@ -1,11 +1,9 @@
 ---
 items:
-  - name: "AWS Solutions Architect - Associate"
-    issuer: "Amazon Web Services"
-    date: "2023-05"
-    credentialId: "ABC123456"
-    url: "https://aws.amazon.com/certification/"
   - name: "Engineer Information Processing"
     issuer: "Human Resources Development Service of Korea"
-    date: "2019-11"
+    date: "2021-06"
+  - name: "Computer Literacy Level 1"
+    issuer: "Korea Chamber of Commerce and Industry"
+    date: "2020-12"
 ---
