--- a/src/content/ko/experience.mdx
+++ b/src/content/ko/experience.mdx
@@ -1,25 +1,29 @@
 ---
 items:
-  - slug: "abc-tech"
-    company: "ABC 테크"
-    role: "시니어 백엔드 개발자"
-    startDate: "2022-03"
+  - slug: "karrot-pay"
+    company: "(주) 당근페이"
+    role: "백엔드 개발자"
+    startDate: "2024-05"
     endDate: ""
     location: "서울"
-    techUsed: ["Java", "Spring Boot", "Kubernetes", "PostgreSQL", "Redis"]
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
-      - "마이크로서비스 아키텍처 설계 및 모놀리스 마이그레이션 주도"
-      - "API 응답 시간 40% 개선"
-      - "일 200만 DAU 서비스의 백엔드 시스템 운영"
-  - slug: "xyz-startup"
-    company: "XYZ 스타트업"
+      - "PG 이중화 및 실시간 정산 등 온라인 결제 / 정산 시스템 고도화"
+      - "현장결제 서비스 선불결제 정산 기능 개발 및 프로모션 시스템 구축"
+      - "안심결제 서비스 카드결제 지원 및 송장 추적 기능 개발"
+      - "B2B 기프티콘 발급 플랫폼 및 선물가게 서비스 개발"
+      - "Spring Boot 2→3, Vue.js 2→3 버전 업 등 기술부채 청산"
+  - slug: "gabia"
+    company: "(주) 가비아"
     role: "백엔드 개발자"
-    startDate: "2020-01"
-    endDate: "2022-02"
+    startDate: "2021-05"
+    endDate: "2024-05"
     location: "서울"
-    techUsed: ["Python", "Django", "AWS", "Redis", "PostgreSQL"]
+    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx", "Docker"]
     highlights:
-      - "실시간 알림 시스템 설계 및 구현"
-      - "결제 프로세싱 인프라 구축"
-      - "CI/CD 파이프라인 자동화로 배포 시간 60% 단축"
+      - "다수의 도메인 레지스트라 서비스 개발 및 운영 (등록, 연장, 예약, 취소, 변경 등)"
+      - "Java Spring MVC, JPA 기반의 MSA 분리 및 RESTful API / Batch 개발"
+      - "PHP 레거시 시스템 현대화 (PHPDoc, PHPUnit, Composer, Xdebug 도입)"
+      - "헥사고날 아키텍처 및 멀티모듈 설계 적용을 통한 서비스 아키텍처 개선"
+      - "OpenFeign, Springdoc, OpenAPI Generator 도입으로 개발 생산성 향상"
 ---
