--- a/src/content/ko/profile.mdx
+++ b/src/content/ko/profile.mdx
@@ -1,11 +1,11 @@
 ---
-name: "홍길동"
-title: "소프트웨어 엔지니어"
-email: "hello@example.com"
+name: "김기정"
+title: "서버 백엔드 개발자"
+email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
-linkedin: "https://linkedin.com/in/example"
+linkedin: "https://www.linkedin.com/in/kijung-kim-2485a9128"
 location: "서울, 대한민국"
-photo: "/images/profile.jpg"
+photo: "/images/Gopherized_Luke.png"
 ---
 
-5년 이상의 경험을 가진 소프트웨어 엔지니어입니다. 확장 가능한 분산 시스템 설계와 클라우드 네이티브 애플리케이션 개발을 전문으로 합니다.
+당근페이에서 백엔드 개발자로 근무하며 Kotlin + Spring 기반의 온·오프라인 결제 / 정산 서버 및 Vue 기반의 어드민을 개발 및 운영하고 있습니다. 과거 레거시 환경이 산재한 팀에 입사하여 성공적인 애플리케이션 현대화를 책임졌던 경험이 있으며, 현재는 안정성 및 확장성 있는 결제 / 정산 시스템을 설계 및 구축하고 고도화해나가고 있습니다.
