--- a/src/content/ko/projects.mdx
+++ b/src/content/ko/projects.mdx
@@ -1,27 +1,109 @@
 ---
 items:
-  - slug: "api-gateway"
-    title: "오픈소스 API 게이트웨이"
-    company: "ABC 테크"
-    startDate: "2023-06"
+  - slug: "offline-payment"
+    title: "현장결제 서비스"
+    company: "(주) 당근페이"
+    startDate: "2025-05"
     endDate: ""
-    techUsed: ["Go", "Docker", "Redis", "gRPC"]
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka"]
     highlights:
-      - "고성능 API 게이트웨이 오픈소스 프로젝트 메인테이너"
-      - "초당 10만 요청 처리 가능한 리버스 프록시 구현"
-      - "GitHub 스타 500+ 달성"
-    links:
-      github: "https://github.com/example/api-gateway"
-  - slug: "chat-platform"
-    title: "실시간 채팅 플랫폼"
-    startDate: "2021-03"
-    endDate: "2021-12"
-    techUsed: ["TypeScript", "NestJS", "WebSocket", "MongoDB"]
+      - "현장결제 선불결제 정산 기능 개발"
+      - "각종 브랜드사 할인 스킴 구현 및 가맹점 관리 고도화"
+      - "내근처 매장 조회 기능 구축"
+      - "브랜드 프로모션 등 그로스 액션"
+  - slug: "gift-shop"
+    title: "선물가게 서비스"
+    company: "(주) 당근페이"
+    startDate: "2024-11"
+    endDate: "2025-05"
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis"]
     highlights:
-      - "WebSocket 기반 실시간 메시징 서버 구축"
-      - "동시 접속자 1만명 지원"
-      - "메시지 전송 지연시간 50ms 이하 달성"
+      - "B2B 프로모션 기프티콘 발급 플랫폼 개발"
+      - "카드 결제 관련 정산 정책 변경 대응"
+      - "상품권 사용처 데이터 적재 등 고도화 작업"
+  - slug: "escrow-service"
+    title: "안심결제 서비스"
+    company: "(주) 당근페이"
+    startDate: "2024-08"
+    endDate: "2024-11"
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Vue.js"]
+    highlights:
+      - "환금성 조회 및 카드결제 기능 개발"
+      - "안심결제 송장 등록 및 택배추적 기능 개발"
+      - "택배사 추가 및 송장 수동 등록 기능 및 어드민 개발"
+  - slug: "payment-settlement"
+    title: "결제 / 정산 시스템"
+    company: "(주) 당근페이"
+    startDate: "2024-05"
+    endDate: "2024-11"
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js"]
+    highlights:
+      - "결제 PG 이중화 및 분배 기능 구현"
+      - "실시간 정산 시스템 구축"
+      - "자동결제 서비스 실패율 개선"
+      - "하나카드 및 국민카드 간편등록 기능 개발"
+      - "파트너 어드민 구축 및 결제내역 어드민 개선"
+  - slug: "karrot-pay-devexp"
+    title: "개발환경 개선 및 기술부채 청산"
+    company: "(주) 당근페이"
+    startDate: "2024-05"
+    endDate: ""
+    techUsed: ["Kotlin", "Spring Framework", "Vue.js", "Github Actions"]
+    highlights:
+      - "결제 / 정산 시스템 Spring Boot 2→3 버전 업"
+      - "어드민 Vue.js 2→3 버전 업"
+      - "Jacoco Badge Generator 기반 테스트 커버리지 시각화"
+      - "당근페이 연동 가이드 및 Scalar 기반 API 문서 사이트 구축"
+  - slug: "domain-services"
+    title: "도메인 서비스 개발 및 고도화"
+    company: "(주) 가비아"
+    startDate: "2021-05"
+    endDate: "2024-05"
+    techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx"]
+    highlights:
+      - "신규 도메인 레지스트리 시스템 구축"
+      - "도메인 예약 통합 검색 / 주문 서비스 개발"
+      - "도메인 등록 변경 / 취소 서비스 개발"
+      - "KR 도메인 예약 서비스 및 만료 도메인 파킹 서비스 개발"
+  - slug: "gabia-legacy"
+    title: "레거시 시스템 개선 및 개발환경 개선"
+    company: "(주) 가비아"
+    startDate: "2021-08"
+    endDate: "2024-05"
+    techUsed: ["Java", "Spring Framework", "PHP", "MySQL", "Nginx", "Docker"]
+    highlights:
+      - "헥사고날 아키텍처 및 멀티모듈 설계 적용, 모노레포 도입"
+      - "도메인 운영 시스템 프론트 서버 분리 및 레지스트리 통신 데몬 개선"
+      - "nGrinder 부하 테스트 및 API 문서 자동화 (Springdoc, OpenAPI Generator) 도입"
+      - "PHP Composer autoload, Xdebug 도입 및 Sentry 관제 알림 개선"
+  - slug: "mattermost-sentrybot"
+    title: "Mattermost Sentrybot"
+    startDate: "2023-06"
+    endDate: "2023-06"
+    techUsed: ["Python", "FastAPI", "Docker"]
+    highlights:
+      - "Sentry 알림을 Mattermost 웹훅으로 수신하는 챗봇 개발"
+      - "FastAPI 기반 웹훅 프록시 서버 및 배포용 Dockerfile 작성"
     links:
-      github: "https://github.com/example/chat-platform"
-      demo: "https://chat-demo.example.com"
+      github: "https://github.com/copolio/mattermost-sentrybot"
+  - slug: "namegpt"
+    title: "NameGPT"
+    startDate: "2023-04"
+    endDate: "2023-05"
+    techUsed: ["Go", "TypeScript", "Next.js"]
+    highlights:
+      - "GPT 기반 도메인 추천 서비스 개발"
+      - "Go, Gin, GORM 기반의 REST API 및 Next.js / Tailwind 프론트 개발"
+    links:
+      github: "https://github.com/copolio/namegpt"
+  - slug: "webcron"
+    title: "Webcron"
+    startDate: "2022-06"
+    endDate: "2022-08"
+    techUsed: ["Kotlin", "Spring Framework", "JPA", "TypeScript", "Vue.js"]
+    highlights:
+      - "파편화된 crontab을 단일 어드민에서 관리할 수 있는 웹 크론탭 개발"
+      - "Kotlin Spring MVC / JPA REST API + Vue / Ant Design 프론트 개발"
+    links:
+      github: "https://github.com/copolio/webcron"
 ---
