refactor: improve portfolio content based on recruiter feedback
- Rewrite profile summary with key achievements and clear positioning
- Unify title across locales (Backend Engineer) and fix teamSize mismatches
- Add result-oriented highlights to experience and project descriptions
- Reframe reflection sections as growth narratives
- Fix English translation issues (fungibility → refundability, etc.)
- Add TODO placeholders for quantitative metrics in Karrot Pay projects

--- a/src/content/en/experience.mdx
+++ b/src/content/en/experience.mdx
@@ -8,11 +8,11 @@ items:
     location: "Seoul"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
-      - "Built PG redundancy and real-time settlement for online payment system"
-      - "Developed offline payment prepaid settlement and promotion systems"
-      - "Added card payment support and shipment tracking to escrow service"
-      - "Built B2B gift card issuance platform and gift shop service"
-      - "Cleared tech debt: Spring Boot 2→3, Vue.js 2→3 upgrades"
+      - "Built PG redundancy and real-time settlement system, improving payment stability and reducing partner settlement cycles"
+      - "Developed prepaid settlement and promotion system for offline payments, contributing to successful service launch"
+      - "Enhanced transaction safety with card payment and shipment tracking features for escrow service"
+      - "Built B2B gift card issuance platform, establishing a new business channel"
+      - "Migrated Spring Boot 2→3 and Vue.js 2→3, resolving security vulnerabilities and improving maintainability"
   - slug: "gabia"
     company: "Gabia"
     role: "Backend Developer"
