--- a/src/content/en/projects/202105-domain-services.mdx
+++ b/src/content/en/projects/202105-domain-services.mdx
@@ -55,7 +55,7 @@ REST API built with Java Spring MVC, JPA, Oracle / Frontend with PHP CodeIgniter
 **Results**
 - Consolidated scattered code into a single Spring MVC microservice, clearing technical debt
 - Refactored magic constants to enums and JSDoc for improved readability and maintainability
-- Applied functional programming paradigm using Lombok's toBuilder for Copy-On-Write, Functional Interface, Lambda, and Stream API to minimize side effects and improve code readability
+- Adopted functional programming patterns (immutable objects via Lombok's toBuilder, Stream API, lambdas) to reduce side effects and improve code maintainability
 
 ---
 
@@ -74,8 +74,8 @@ REST API built with Java Spring MVC, JPA, Oracle / Frontend with PHP CodeIgniter
 - Added web page features based on legacy AngularJS and Fetch API using markup provided by the frontend team
 
 **Process**
-- Failed to properly understand the manual refund process used by the operations team during planning, leading to schedule delays
-- Was overly accommodating during negotiations, resulting in scope creep — ended up handling all frontend work and payment debugging despite separate responsible departments
+- Initial schedule delay due to insufficient process alignment with the operations team during planning; subsequently established stakeholder interview process at project kickoff
+- Learned the importance of clearly defining role boundaries in cross-team collaboration; applied early R&R agreements in subsequent projects for more efficient teamwork
 
 **Results**
 - Dramatically reduced operations team workload of 100+ daily manual processes
