--- a/src/content/en/projects/202405-payment-settlement.mdx
+++ b/src/content/en/projects/202405-payment-settlement.mdx
@@ -1,6 +1,6 @@
 ---
 role: "Backend Developer"
-teamSize: 6
+teamSize: 8
 ---
 
 ## Overview
@@ -16,6 +16,6 @@ Enhanced Karrot Pay's online payment and settlement systems. Focused on improvin
 - Supported Karrot Pay payment/settlement integration
 
 ## Results
-- Improved payment availability through PG redundancy
-- Shortened partner settlement cycles with real-time settlement
-- Increased payment success rate by improving auto-payment failures
+- Enabled uninterrupted payment processing during single PG outages through PG redundancy
+- Reduced partner settlement cycles by building real-time settlement system <!-- TODO: specific metrics (e.g., D+N days → real-time) -->
+- Improved payment success rate through failure analysis and retry logic optimization <!-- TODO: specific metrics (e.g., N% → N%) -->
