--- a/src/content/en/projects/202505-offline-payment.mdx
+++ b/src/content/en/projects/202505-offline-payment.mdx
@@ -1,6 +1,6 @@
 ---
 role: "Backend Developer"
-teamSize: 5
+teamSize: 7
 ---
 
 ## Overview
@@ -13,5 +13,5 @@ Developing and operating the backend system for Karrot Pay's offline payment ser
 - Developed various growth features including brand promotions
 
 ## Results
-- Successfully launched offline payment service
-- Contributed to user acquisition through diverse brand promotions
+- Successfully launched and stably operated the offline payment service
+- Drove user acquisition and merchant activation through brand promotion system <!-- TODO: specific metrics (e.g., N merchants, N MAU) -->
