--- a/src/content/ko/experience.mdx
+++ b/src/content/ko/experience.mdx
@@ -8,11 +8,11 @@ items:
     location: "서울"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
-      - "PG 이중화 및 실시간 정산 등 온라인 결제 / 정산 시스템 고도화"
-      - "현장결제 서비스 선불결제 정산 기능 개발 및 프로모션 시스템 구축"
-      - "안심결제 서비스 카드결제 지원 및 송장 추적 기능 개발"
-      - "B2B 기프티콘 발급 플랫폼 및 선물가게 서비스 개발"
-      - "Spring Boot 2→3, Vue.js 2→3 버전 업 등 기술부채 청산"
+      - "PG 이중화 및 실시간 정산 시스템 구축으로 결제 안정성 강화 및 파트너 정산 주기 단축"
+      - "현장결제 선불결제 정산 및 프로모션 시스템 구축, 서비스 정식 오픈 기여"
+      - "안심결제 카드결제/송장추적 기능 개발로 거래 안전성 강화"
+      - "B2B 기프티콘 발급 플랫폼 구축으로 신규 비즈니스 채널 확보"
+      - "Spring Boot 2→3, Vue.js 2→3 마이그레이션으로 보안 취약점 해소 및 유지보수성 개선"
   - slug: "gabia"
     company: "(주) 가비아"
     role: "백엔드 개발자"
