--- a/src/content/ko/profile.mdx
+++ b/src/content/ko/profile.mdx
@@ -1,6 +1,6 @@
 ---
 name: "김기정"
-title: "서버 백엔드 개발자"
+title: "백엔드 엔지니어"
 email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
 linkedin: "https://www.linkedin.com/in/kijung-kim-2485a9128"
@@ -8,4 +8,4 @@ location: "서울, 대한민국"
 photo: "/images/Gopherized_Luke.png"
 ---
 
-당근페이에서 백엔드 개발자로 근무하며 Kotlin + Spring 기반의 온·오프라인 결제 / 정산 서버 및 Vue 기반의 어드민을 개발 및 운영하고 있습니다. 과거 레거시 환경이 산재한 팀에 입사하여 성공적인 애플리케이션 현대화를 책임졌던 경험이 있으며, 현재는 안정성 및 확장성 있는 결제 / 정산 시스템을 설계 및 구축하고 고도화해나가고 있습니다.
+결제/정산 도메인에서 안정성과 확장성을 갖춘 시스템을 설계하고 구축하는 데 강점이 있는 백엔드 엔지니어입니다. 당근페이에서 Kotlin + Spring 기반 PG 이중화 및 실시간 정산 시스템을 구축하고 있으며, 가비아에서는 레거시 통신 데몬의 처리량을 1,000배 개선(200 → 200,000 동시요청)한 경험이 있습니다. 레거시 환경에서도 체계적인 현대화를 주도하며, 비즈니스 임팩트를 만들어내는 개발자입니다.
