--- a/src/content/ko/projects/202105-domain-services.mdx
+++ b/src/content/ko/projects/202105-domain-services.mdx
@@ -74,8 +74,8 @@ Java Spring MVC, JPA, Oracle 기반의 REST API / PHP CodeIgniter, JavaScript, j
 - 프런트 팀에서 전달받은 마크업을 기반으로 레거시 AngularJS 및 Fetch API 기반으로 웹 페이지 기능 추가
 
 **진행 과정**
-- 기획 단계에서 운영실에서 실제로 수동으로 처리하던 환불 프로세스를 제대로 파악하지 못해 최종 일정의 지연으로 이어짐
-- 협의 과정에서 지나치게 수용적이었고, 업무 조율에 실패. 담당 부서가 별도로 존재함에도 프런트 작업과 결제 디버깅 전반을 모두 작업해야 했던 점에서 회의 과정에서의 의견 개진 부족을 반성
+- 초기 기획 단계에서 운영팀과의 프로세스 동기화 부족으로 일정이 지연되었으나, 이를 계기로 프로젝트 킥오프 시 이해관계자 인터뷰 프로세스를 정립
+- 다부서 협업 과정에서 역할 범위를 명확히 정의하는 것의 중요성을 학습, 이후 프로젝트에서는 초기 R&R 합의를 통해 효율적 협업 체계를 구축
 
 **성과**
 - 일일 100건 이상 수동으로 처리되던 운영실 공수 대폭 감소
