--- a/src/content/ko/projects/202505-offline-payment.mdx
+++ b/src/content/ko/projects/202505-offline-payment.mdx
@@ -16,5 +16,5 @@ teamSize: 7
 
 ## 성과
 
-- 현장결제 서비스 정식 오픈 및 안정적 운영
-- 다양한 브랜드 프로모션을 통한 사용자 확보 기여
+- 현장결제 서비스 정식 오픈 및 안정적 운영 달성
+- 브랜드 프로모션 시스템을 통한 사용자 확보 및 가맹점 활성화 기여 <!-- TODO: 구체적 수치 (예: N개 가맹점, MAU N명 등) -->
