--- a/src/content/ko/projects/202405-payment-settlement.mdx
+++ b/src/content/ko/projects/202405-payment-settlement.mdx
@@ -19,6 +19,6 @@ teamSize: 8
 
 ## 성과
 
-- PG 이중화를 통한 결제 가용성 향상
-- 실시간 정산 시스템 구축으로 파트너사 정산 주기 단축
-- 자동결제 실패율 개선을 통한 결제 성공률 향상
+- PG 이중화를 통해 단일 PG 장애 시에도 무중단 결제 처리 가능, 결제 안정성 확보
+- 실시간 정산 시스템 구축으로 파트너사 정산 주기 단축 <!-- TODO: 구체적 수치 (예: D+N일 → 실시간) -->
+- 자동결제 실패 원인 분석 및 재시도 로직 개선을 통해 결제 성공률 향상 <!-- TODO: 구체적 수치 (예: N% → N%) -->
