feat: add company website links and unify role titles
- Add website field to Experience type and display external link icons
- Unify EN role to "Software Engineer", KO role to "백엔드 엔지니어"
- Remove "서버" prefix from Korean site title

--- a/src/content/en/experience.mdx
+++ b/src/content/en/experience.mdx
@@ -2,10 +2,11 @@
 items:
   - slug: "karrot-pay"
     company: "Karrot Pay"
-    role: "Backend Developer"
+    role: "Software Engineer"
     startDate: "2024-05"
     endDate: ""
     location: "Seoul"
+    website: "https://www.daangnpay.com"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
       - "Built PG redundancy and real-time settlement system, improving payment stability and reducing partner settlement cycles"
@@ -15,10 +16,11 @@ items:
       - "Migrated Spring Boot 2→3 and Vue.js 2→3, resolving security vulnerabilities and improving maintainability"
   - slug: "gabia"
     company: "Gabia"
-    role: "Backend Developer"
+    role: "Software Engineer"
     startDate: "2021-05"
     endDate: "2024-05"
     location: "Seoul"
+    website: "https://domain.gabia.com"
     techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx", "Docker"]
     highlights:
       - "Developed and operated multiple domain registrar services (registration, renewal, reservation, etc.)"
