--- a/src/content/en/profile.mdx
+++ b/src/content/en/profile.mdx
@@ -1,6 +1,6 @@
 ---
 name: "Kijung Kim"
-title: "Backend Engineer"
+title: "Software Engineer"
 email: "rlwjd1504@gmail.com"
 github: "https://github.com/copolio"
 linkedin: "https://www.linkedin.com/in/kijung-kim-2485a9128"
@@ -8,4 +8,4 @@ location: "Seoul, South Korea"
 photo: "/images/Gopherized_Luke.png"
 ---
 
-Backend engineer specializing in payment and settlement systems. At Karrot Pay, building PG redundancy and real-time settlement infrastructure with Kotlin + Spring. At Gabia, improved a legacy communication daemon's throughput by 1,000x (200 → 200,000 concurrent requests). Proven track record of systematically modernizing legacy systems to deliver measurable business impact.
+Software engineer specializing in payment and settlement systems. At Karrot Pay, building PG redundancy and real-time settlement infrastructure with Kotlin + Spring. At Gabia, improved a legacy communication daemon's throughput by 1,000x (200 → 200,000 concurrent requests). Proven track record of systematically modernizing legacy systems to deliver measurable business impact.
