--- a/src/content/ko/experience.mdx
+++ b/src/content/ko/experience.mdx
@@ -2,10 +2,11 @@
 items:
   - slug: "karrot-pay"
     company: "(주) 당근페이"
-    role: "백엔드 개발자"
+    role: "백엔드 엔지니어"
     startDate: "2024-05"
     endDate: ""
     location: "서울"
+    website: "https://www.daangnpay.com"
     techUsed: ["Kotlin", "Spring Framework", "JPA", "MySQL", "Redis", "Kafka", "Vue.js", "Docker", "Kubernetes"]
     highlights:
       - "PG 이중화 및 실시간 정산 시스템 구축으로 결제 안정성 강화 및 파트너 정산 주기 단축"
@@ -15,10 +16,11 @@ items:
       - "Spring Boot 2→3, Vue.js 2→3 마이그레이션으로 보안 취약점 해소 및 유지보수성 개선"
   - slug: "gabia"
     company: "(주) 가비아"
-    role: "백엔드 개발자"
+    role: "백엔드 엔지니어"
     startDate: "2021-05"
     endDate: "2024-05"
     location: "서울"
+    website: "https://domain.gabia.com"
     techUsed: ["Java", "Spring Framework", "JPA", "PHP", "MySQL", "Oracle", "Nginx", "Docker"]
     highlights:
       - "다수의 도메인 레지스트라 서비스 개발 및 운영 (등록, 연장, 예약, 취소, 변경 등)"
